[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]

[node name="HUD" type="Control"]
margin_right = 1024.0
margin_bottom = 50.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 59.0
margin_bottom = 22.0
text = "Level X/X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blank" type="Control" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 63.0
margin_right = 63.0
margin_bottom = 30.0
size_flags_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 349.0
margin_right = 617.0
margin_bottom = 30.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/Middle"]
margin_right = 51.0
margin_bottom = 30.0
text = "Config"

[node name="ForecastButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/Middle"]
margin_left = 61.0
margin_right = 127.0
margin_bottom = 30.0
text = "Forecast"

[node name="CollidixButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/Middle"]
margin_left = 137.0
margin_right = 196.0
margin_bottom = 30.0
text = "Collidix"

[node name="ConfirmButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/Middle"]
margin_left = 206.0
margin_right = 268.0
margin_bottom = 30.0
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blank2" type="Control" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 621.0
margin_right = 903.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="MenuButton" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 907.0
margin_right = 955.0
margin_bottom = 30.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadSpace" type="Control" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 959.0
margin_right = 1004.0
margin_bottom = 30.0
rect_min_size = Vector2( 45, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
